<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:padding="16dp"
    android:layout_marginTop="40sp">

    <ImageView
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_constraintEnd_toEndOf="parent"
        android:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_of_a_person"
        android:src="@drawable/listify_logo"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="0dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_corner"
        android:constraintTop_toStartOf="@id/textView"
        android:hint="@string/username"

        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="328dp" />


</androidx.constraintlayout.widget.ConstraintLayout>