<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:contentDescription="@string/image_of_a_person"
        android:src="@drawable/listify_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetPw_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/forgetPw_header"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPw_header" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginVertical="2dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/email"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/email_reminder_text"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/forgetPw_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/emailBtn"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginVertical="24dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_corner_grey"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/sendEmail"
        android:padding="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reminder_text"
        />


</androidx.constraintlayout.widget.ConstraintLayout>